<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/circular_blue"
    tools:context=".ui.classes.ClassesFragment">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/banner"
        android:contentDescription="@string/placeholder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_classes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Classes"
        android:textAlignment="center"
        android:textColor="@color/teal_Light"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@id/imageView2"
        app:layout_constraintEnd_toEndOf="@id/imageView2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/imageView2"
        app:layout_constraintTop_toTopOf="@id/imageView2"
        app:layout_constraintVertical_bias="0.5" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <!-- Math Button -->
            <Button
                android:id="@+id/mathButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mathSubject"
                android:padding="20dp"
                android:background="@drawable/button_border_outline"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:layout_marginBottom="20dp"/>

            <!-- Reading Button -->
            <Button
                android:id="@+id/readingButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/readingSubject"
                android:padding="20dp"
                android:background="@drawable/button_border_outline"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:layout_marginBottom="20dp"/>

            <!-- Science Button -->
            <Button
                android:id="@+id/scienceButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scienceSubject"
                android:padding="20dp"
                android:background="@drawable/button_border_outline"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:layout_marginBottom="20dp"/>

            <!-- Social Studies Button -->
            <Button
                android:id="@+id/socialStudiesButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/socialStudiesSubject"
                android:padding="20dp"
                android:background="@drawable/button_border_outline"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:layout_marginBottom="20dp"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>